--- a/_client/styles/main.css
+++ b/_client/styles/main.css
@@ -26,6 +26,6 @@
 
 .content .wheel { width: 75rem; height: 75rem; display: block; background-color: transparent; border: 4px solid #3c4d59; border-radius: 100%; margin: 0 auto; margin-top: 150px; position: relative; top: 0; transition: all 3s ease-out; }
 
-.content .wheel-circle { width: 100px; height: 100px; position: absolute; top: 50%; left: 50%; background-color: #3c4d59; border-radius: 100%; transition: all .3s; text-align: center; padding-top: 40px; font-size: 1.25rem; color: #ffffff; font-weight: bold; text-decoration: none; font-family: "Roboto", "Helvetica", "sans-serif"; }
+.content .wheel-circle { width: 100px; height: 100px; position: absolute; top: 50%; left: 50%; background-color: #3c4d59; background-size: contain; border-radius: 100%; transition: all .3s; text-align: center; padding-top: 40px; font-size: 1.25rem; color: #ffffff; font-weight: bold; text-decoration: none; font-family: "Roboto", "Helvetica", "sans-serif"; text-shadow: 2px 2px rgba(0, 0, 0, 0.5); }
 
 .content .wheel-circle.active { background-color: #18aae7; }
