--- a/_source/sass/_site.scss
+++ b/_source/sass/_site.scss
@@ -81,6 +81,7 @@
       top:                50%;
       left:               50%;
       background-color:   $C-mainLight;
+      background-size:    contain;
       border-radius:      100%;
       transition:         all .3s;
 
@@ -91,6 +92,7 @@
       font-weight:        bold;
       text-decoration:    none;
       font-family:        $font-family;
+      text-shadow:        2px 2px rgba(0,0,0,0.5);
 
       &.active {
         background-color: $C-blue-cta;
